--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ version: v1.1.0
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :compressed # You might prefer to minify using :compressed
+  style: :compressed # minify using :compressed, :expanded for normal
 
 # Use the following plug-ins
 gems:
