--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar:
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: syson.se
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github: sysondev
+  instagram: syson.se
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
