--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: syson.
+name: Syson
 
 # Short bio or description (displayed in the header)
-description:
+description: IT-konsulter
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
