removing github link

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook: syson.se
   flickr:
-  github: sysondev
+  github:
   instagram: syson.se
   linkedin:
   pinterest:
