--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Syson
 
 # Short bio or description (displayed in the header)
-description: IT-konsulter
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
